<resources>
    <string name="app_name">Verbundstudium App</string>
    <string name="title_activity_login">Anmelden</string>

    <!-- Strings related to login -->
    <string name="prompt_email_username">Benutzername / Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_headline">Bei V-App anmelden</string>
    <string name="btn_settings">Einstellungen</string>
    <string name="btn_calendar">Kalendar</string>
    <string name="btn_mensa">Mensa</string>
    <string name="btn_sprechstunde">Sprechstunden</string>
    <string name="btn_stundenplan">Stundenpläne</string>
    <string name="btn_ilias">Ilias</string>
    <string name="btn_evaluation">Evaluation</string>
    <string name="btn_campus_nav">Campus Navigation</string>
    <string name="btn_bib">Bibliothek</string>
    <string name="btn_pruefungsplan">Prüfungspläne</string>
    <string name="btn_messages">Nachrichten</string>
    <string name="btn_psso">PSSO</string>
    <string name="btn_koeln">TH Köln</string>
    <string name="btn_dortmund">FH Dortmund</string>
    <string name="coming_soon_message">Coming soon!</string>
    <string name="title_activity_mensa">Mensa</string>
    <string name="tab_mensa_gummersbach">Gummersbach</string>
    <string name="tab_mensa_dortmund">Dortmund</string>
    <string name="mensa_menu_student_header">Studierende</string>
    <string name="mensa_menu_guest_header">Gäste</string>

    <string name="default_notification_channel_id">push_channel</string>
    <string name="mensa_is_closed">Mensa ist heute geschlossen!</string>
    <string name="title_activity_lessons">Stundenpläne</string>
    <string name="title_activity_calendar">Kalendar</string>
    <string name="title_activity_exams">Prüfungspläne</string>
</resources>
