<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarStyle="outsideOverlay"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/fh_dortmund"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/th_koeln"/>

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/settings_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_settings"
                    android:text="@string/btn_settings"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/calendar_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_calendar"
                    android:text="@string/btn_calendar"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mensa_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_mensa"
                    android:text="@string/btn_mensa"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/sprechstunden_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_sprechstunde"
                    android:text="@string/btn_sprechstunde"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/stundenplan_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_stundenplan"
                    android:text="@string/btn_stundenplan"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/ilias_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_ilias"
                    android:text="@string/btn_ilias"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/evaluation_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_evaluation"
                    android:text="@string/btn_evaluation"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/campus_nav_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_campus_nav"
                    android:text="@string/btn_campus_nav"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bib_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_bib"
                    android:text="@string/btn_bib"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/pruefungsplan_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_pruefungsplan"
                    android:text="@string/btn_pruefungsplan"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/messages_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_message"
                    android:text="@string/btn_messages"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/psso_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_psso"
                    android:text="@string/btn_psso"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/th_koeln_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_university"
                    android:text="@string/btn_koeln"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>

                <Button
                    android:id="@+id/fh_dortmund_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ic_university"
                    android:text="@string/btn_dortmund"
                    android:textAllCaps="false"
                    android:textColor="@color/mainMenuTextColor"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>